syntax = "proto3";

package image_data;

message Image {
  int32 width = 1;  // 图像宽度
  int32 height = 2;  // 图像高度
  string format = 3;  // 图像格式，如"JPEG"、"PNG"
  bytes data = 4;  // 图像数据，二进制格式
}